src/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2021-08-12T11:11:06Z"
  generation: 1
  name: certs-magic-ingress
  namespace: certs-magic
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: certs-magic-clusterip
          servicePort: 80
        path: /ben
        pathType: Prefix
